# aas-core3.0-java

./: .gitignore  AUTHORS  CONTRIBUTING.md  LICENSE  README.md  allclasses-frame.html  allclasses-index.html  allclasses-noframe.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-frame.html  overview-summary.html  overview-tree.html  package-search-index.js  pom.xml  search.html  serialized-form.html  tag-search-index.js  type-search-index.js
dev_scripts/: check_docs_package_version.py  find_duplicate_files_if_case_insensitive.py  pyproject.toml  setup.py  update_to_aas_core_meta_codegen.py  update_to_aas_core_meta_codegen_and_testgen.py
dev_scripts/aas_core3/: __init__.py
dev_scripts/codegen/: codegen.py
dev_scripts/semantic-patching/: .gitignore  README.md  pom.xml
dev_scripts/test_codegen/: generate_common_jsonization.py  generate_test_common.py  generate_test_for_copying.py  generate_test_for_descend_and_visitor_through.py  generate_test_for_descend_once.py  generate_test_for_enhancing.py  generate_test_for_get_X_or_default.py  generate_test_for_jsonization_of_concrete_classes.py  generate_test_for_jsonization_of_concrete_classes_outside_container.py  generate_test_for_jsonization_of_enums.py  generate_test_for_jsonization_of_interfaces.py  generate_test_for_over_X_or_empty.py  generate_test_for_xmlization_of_concrete_classes.py  generate_test_for_xmlization_of_concrete_classes_outside_container.py  generate_test_for_xmlization_of_interfaces.py  (+2 more)
doc/: dummy.txt  (+1 more)
(+1626 files in other folders)
